--- a/OcalimochoApp/app/src/main/res/values/strings.xml
+++ b/OcalimochoApp/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="title_activity_casilla1">casilla1</string>
     <string name="title_activity_casilla2">casilla2</string>
 
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
