--- a/OcalimochoApp/app/src/main/res/values/strings.xml
+++ b/OcalimochoApp/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_mimica">MimicaActivity</string>
+    <string name="title_activity_yo_nunca">YoNuncaActivity</string>
+    <string name="title_activity_tabu">TabuActivity</string>
 
 </resources>
