Finalizado juego de Tabu, duelo, duelo de tres y carcel

--- a/OcalimochoApp/app/src/main/res/values/strings.xml
+++ b/OcalimochoApp/app/src/main/res/values/strings.xml
@@ -14,5 +14,8 @@
     <string name="title_activity_mimica">MimicaActivity</string>
     <string name="title_activity_yo_nunca">YoNuncaActivity</string>
     <string name="title_activity_tabu">TabuActivity</string>
+    <string name="title_activity_duelo">DueloActivity</string>
+    <string name="title_activity_duelo_tres">DueloTresActivity</string>
+    <string name="title_activity_carcel">CarcelActivity</string>
 
 </resources>
