--- a/OcalimochoApp/app/src/main/res/values/strings.xml
+++ b/OcalimochoApp/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="title_activity_carcel">CarcelActivity</string>
     <string name="title_activity_pasword">PaswordActivity</string>
     <string name="title_activity_pregunta">PreguntaActivity</string>
+    <string name="title_activity_ranking">RankingActivity</string>
 
 </resources>
