--- a/OcalimochoApp/app/src/main/res/values/strings.xml
+++ b/OcalimochoApp/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="prefs_theme_key">theme</string>
     <string name="title_activity_inicio">Ocalimocho</string>
     <string name="title_activity_activity_main">Jugadores</string>
+    <string name="title_activity_lista_minijuegos">ListaMinijuegosActivity</string>
 
 
 </resources>
