--- a/OcalimochoApp/app/src/main/res/values/strings.xml
+++ b/OcalimochoApp/app/src/main/res/values/strings.xml
@@ -23,7 +23,5 @@
     <string name="prefs_theme_key">theme</string>
     <string name="title_activity_inicio">Ocalimocho</string>
     <string name="title_activity_activity_main">Jugadores</string>
-    <string name="title_activity_lista_minijuegos">Minijuegos</string>
-
-
+    <string name="title_activity_lista_minijuegos">Lista de minijuegos</string>
 </resources>
